objects/Quote.object
<CustomObject>
    <fields>
        <fullName>CN_Accepted_Item_Num__c</fullName>
        <label>Accepted Item Num</label>
        <summaryFilterItems>
            <field>QuoteLineItem.CN_Customer_Acceptance__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Approval_Reminder_Datetime__c</fullName>
        <label>CN Approval Reminder Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Approve_Step__c</fullName>
        <label>Approve Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step1</fullName>
                </value>
                <value>
                    <fullName>Step2</fullName>
                </value>
                <value>
                    <fullName>Step3</fullName>
                </value>
                <value>
                    <fullName>Step4</fullName>
                </value>
                <value>
                    <fullName>Step5</fullName>
                </value>
                <value>
                    <fullName>Step6</fullName>
                </value>
                <value>
                    <fullName>Step7</fullName>
                </value>
                <value>
                    <fullName>Step8</fullName>
                </value>
                <value>
                    <fullName>Step9</fullName>
                </value>
                <value>
                    <fullName>Step10</fullName>
                </value>
                <value>
                    <fullName>Step11</fullName>
                </value>
                <value>
                    <fullName>Step12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Approved_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QuotesQ6P6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Approver_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QuotesQ6PG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Approver_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QuotesQ6PV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Current_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <formula>Opportunity.Account.CN_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Journey__c</fullName>
        <formula>TEXT(Opportunity.Account.CN_Customer_Journey__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Journey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Name__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Effective_Duration__c</fullName>
        <formula>TEXT(CN_Effective_Date__c) + &quot; ~ &quot; +  TEXT(ExpirationDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Finance_Acceptance_Item_Count__c</fullName>
        <label>Finance Acceptance Item Count</label>
        <summaryFilterItems>
            <field>QuoteLineItem.CN_Finance_Acceptance__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Finance_Deined_Item_Count__c</fullName>
        <label>Finance Deined Item Count</label>
        <summaryFilterItems>
            <field>QuoteLineItem.CN_Finance_Acceptance__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Finance_Notify_DateTime__c</fullName>
        <label>Finance Notify DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Finance_Process_Status__c</fullName>
        <formula>IF(
	ISPICKVAL(Status, &quot;Approved&quot;),
	IF(
		ISBLANK(CN_Customer_Code__c ),
		$Label.CN_Quote_Finance_Process_Status_PendingOpenAccount,
		IF(
			CN_Is_Finance_Notified__c,
			IF(
				CN_Finance_Acceptance_Item_Count__c = CN_Sync_Success_Item_Count__c &amp;&amp; CN_Accepted_Item_Num__c == (CN_Finance_Acceptance_Item_Count__c + CN_Finance_Deined_Item_Count__c) &amp;&amp; CN_Accepted_Item_Num__c != 0,
				$Label.CN_Quote_Finance_Process_Status_Done + TEXT(CN_Finance_Acceptance_Item_Count__c ),
				$Label.CN_Quote_Finance_Process_Status_Processing + TEXT( CN_Accepted_Item_Num__c ) + $Label.CN_Quote_Finance_Process_Status_Finance_Accept + TEXT( CN_Finance_Acceptance_Item_Count__c ) + $Label.CN_Quote_Finance_Process_Status_Synced + TEXT( CN_Sync_Success_Item_Count__c ) + $Label.CN_Quote_Finance_Process_Status_Failed  + TEXT( CN_Sync_Failed_Item_Count__c )
			),
			$Label.CN_Quote_Finance_Process_Status_WaitingNotufy
		)
	),
	&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_All_Accepted__c</fullName>
        <formula>IF( CN_Item_Num__c = 0 , FALSE, IF( CN_Accepted_Item_Num__c =  CN_Item_Num__c  , TRUE , FALSE ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is All Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_All_Signed__c</fullName>
        <formula>IF( CN_Item_Num__c  = 0, FALSE, IF( CN_Item_Sign_Num__c =  CN_Item_Num__c  , TRUE , FALSE ))</formula>
        <label>Is All Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Auto_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auto Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Finance_Notified__c</fullName>
        <formula>NOT(ISBLANK(CN_Finance_Notify_DateTime__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Finance Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Finance_Process_Done__c</fullName>
        <formula>IF( 
 ISPICKVAL(Status, &quot;Approved&quot;) &amp;&amp;  CN_Is_Finance_Notified__c ,
 IF(
    CN_Finance_Acceptance_Item_Count__c ==  (CN_Sync_Success_Item_Count__c +  CN_Sync_Failed_Item_Count__c ) &amp;&amp; CN_Accepted_Item_Num__c == CN_Finance_Acceptance_Item_Count__c &amp;&amp; CN_Accepted_Item_Num__c != 0,
    TRUE,
    FALSE
 )
 ,FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Finance Process Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Item_Num__c</fullName>
        <label>Item Num</label>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Item_Sign_Num__c</fullName>
        <label>Item Sign Num</label>
        <summaryFilterItems>
            <field>QuoteLineItem.CN_Customer_Acceptance__c</field>
            <operation>contains</operation>
            <value>Accepted, Accepted, Denied</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Latest_Approver__c</fullName>
        <label>Latest Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Please_Confirm__c</fullName>
        <formula>CASE(
  TEXT( Status  ),
  &quot;New&quot;, $Label.CN_PleaseConfirm_Value_BackToNew,
  &quot;Rejected&quot;, $Label.CN_PleaseConfirm_Value_BackToNew,
  &quot;Ready for Approval&quot;, $Label.CN_PleaseConfirm_Value_ReadyForApproval,
  &quot;Submitted for Approval&quot;, $Label.CN_PleaseConfirm_Value_AlreadySubmitted,
  $Label.CN_PleaseConfirm_Value_AlreadySubmitted
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Please Confirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quote_Email_Subject__c</fullName>
        <formula>IF(
   ISBLANK( CN_Customer_Code__c ),
    &apos;&apos;,
    Opportunity.Account.CN_Customer_Code__c
  ) 
&amp; &apos; &apos; &amp; CN_Customer_Name__c  

&amp; &apos; - &apos; &amp;  CN_Sales_Person__c</formula>
        <label>CN_Quote_Email_Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quote_Is_Cross_Channel__c</fullName>
        <formula>Opportunity.Account.CN_Is_Cross_Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Cross Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Quote_Number_Setting__c</fullName>
        <label>Quote Number From Setting</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quote_Number__c</fullName>
        <formula>IF( 
  !ISBLANK(Opportunity.Account.CN_Customer_Code__c),
  LEFT(Opportunity.Account.CN_Customer_Code__c , 2) &amp; &quot;-&quot; &amp; CN_Quote_Number_Setting__c,
  CN_Quote_Number_Setting__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Ready_Date__c</fullName>
        <label>Ready Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person Name</label>
        <referenceTo>CN_Internal_Employee__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person__c</fullName>
        <formula>CN_Sales_Person_Name__r.Name</formula>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Source_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>SourceQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Error_Message__c</fullName>
        <label>Sync Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Failed_Item_Count__c</fullName>
        <label>Sync Failed Item Count</label>
        <summaryFilterItems>
            <field>QuoteLineItem.CN_Sync_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Success_Item_Count__c</fullName>
        <label>Sync Success Item Count</label>
        <summaryFilterItems>
            <field>QuoteLineItem.CN_Sync_Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Time__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>QUOTE.QUOTENUMBER</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CN_Quote_Number__c</columns>
        <columns>CN_Sales_Person_Name__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CN_Customer_Code__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Effective_Date__c</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>CN_Finance_Process_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
    </listViews>
    <listViews>
        <fullName>All_Quotes_Completed</fullName>
        <columns>QUOTE.QUOTENUMBER</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CN_Quote_Number__c</columns>
        <columns>CN_Sales_Person_Name__c</columns>
        <columns>CN_Customer_Code__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Effective_Date__c</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>CN_Sync_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Is_Finance_Notified__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Is_Finance_Process_Done__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Quotes -  Completed</label>
        <sharedTo>
            <role>CN_Finance_MDM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_All_Quotes_NeedtoSync</fullName>
        <columns>QUOTE.QUOTENUMBER</columns>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>CN_Quote_Number__c</columns>
        <columns>CN_Sales_Person_Name__c</columns>
        <columns>CN_Customer_Code__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Effective_Date__c</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>CN_Finance_Process_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Is_Finance_Notified__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Is_Finance_Process_Done__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Quotes -  Need to Process</label>
        <sharedTo>
            <role>CN_Finance_MDM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_My_Quotes_Completed</fullName>
        <columns>QUOTE.QUOTENUMBER</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CN_Quote_Number__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CN_Customer_Code__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Effective_Date__c</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CN_Is_Finance_Process_Done__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Quotes - Completed</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.QUOTENUMBER</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CN_Quote_Number__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CN_Customer_Code__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Effective_Date__c</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.STATUS</columns>
        <columns>CN_Finance_Process_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>CN_Quote</fullName>
        <active>true</active>
        <label>CN Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>CN_Quote_New</fullName>
        <active>true</active>
        <label>CN Quote New</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Prevent_Edit_Ready</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
AND(
ISPICKVAL(Status , &quot;Ready for Approval&quot;),
NOT(ISCHANGED(Status ))
)
)</errorConditionFormula>
        <errorMessage>It&apos;s not allowed to edit Quote when it&apos;s Ready for Appproval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Quote_Check_EffectiveExpirationDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Quote&apos;,
  CN_Effective_Date__c &gt; ExpirationDate
)</errorConditionFormula>
        <errorMessage>Expiration Date should be later than Effective Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Quote_Check_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Quote&apos;,
  NOT(ISCHANGED(TotalPrice)),
  ISNEW() || ISCHANGED(CN_Effective_Date__c ),
  CN_Effective_Date__c &lt;  TODAY()
)</errorConditionFormula>
        <errorDisplayField>CN_Effective_Date__c</errorDisplayField>
        <errorMessage>Effective Date shouldn&apos;t be earlier than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Quote_Check_Opp_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Quote_New&apos;,
  ISNEW(),
  NOT(ISPICKVAL(Opportunity.StageName , &apos;Quote/Negotiation&apos;))
)</errorConditionFormula>
        <errorDisplayField>OpportunityId</errorDisplayField>
        <errorMessage>You can&apos;t create new quote for the opportunity whose stage is not Quote/Negotiation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Quote_Check_Prices</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  RecordType.DeveloperName = &apos;CN_Quote&apos;,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  AND( ISBLANK( CN_Approver_1__c )  )
)</errorConditionFormula>
        <errorMessage>第一个审批人不能为空</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Quote_Check_Ready_LineItem_Num</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 ISPICKVAL(Status  , &apos;Ready for Approval&apos;) ,
 CN_Item_Num__c = 0
)</errorConditionFormula>
        <errorMessage>Please add quote line items before ready for approve.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Quote_Prevent_Edit_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Quote&apos;,
  OR(
    ISPICKVAL(Status, &quot;Approved&quot;),
    ISPICKVAL(PRIORVALUE(Status), &quot;Approved&quot;)
  ),
  OR(
    ISCHANGED(Status),
    ISCHANGED(Name),
    ISCHANGED(CN_Effective_Date__c),
    ISCHANGED(ExpirationDate)
  )
)</errorConditionFormula>
        <errorMessage>You are not allowed to edit when quote is marked as Approved.</errorMessage>
    </validationRules>
</CustomObject>